<?xml version="1.0" encoding="utf-8"?>
<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#F5F5F5"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.Registration.Invite">

    <LinearLayout
        android:id="@+id/mainLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp">


        <!--- card 1-->
        <com.google.android.gms.ads.AdView
            android:id="@+id/mAdview6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="visible"
            app:adSize="BANNER"
            app:adUnitId="ca-app-pub-1001585373006833/6362985025"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView

            android:id="@+id/btnDeposit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            app:cardCornerRadius="4dp"
            app:cardElevation="8dp">

            <LinearLayout
                android:id="@+id/invite_step1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="8dp"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="210dp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/mobile_load"
                    android:src="@drawable/redemption_of_coins" />


                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:visibility="visible"
                    app:counterMaxLength="6"
                    app:endIconMode="clear_text">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etRedemptionCode"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/code"
                        android:inputType="number"
                        android:maxLength="9"
                        android:textAlignment="center"
                        android:textSize="34sp"
                        android:textStyle="bold" />

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/tvError"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_weight="1"
                    android:text="@string/invalid_code"
                    android:textColor="@color/Cr_Color"
                    android:visibility="gone" />

                <Button
                    android:id="@+id/btnRedemption"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:layout_marginTop="32dp"
                    android:text="@string/redeem"
                    android:textColor="@color/WhiteSmoke"
                    android:textSize="18sp"
                    android:visibility="visible"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvRequestHadya" />


            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView

            android:id="@+id/btnDeposit1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            app:cardCornerRadius="4dp"
            app:cardElevation="8dp">

            <LinearLayout
                android:id="@+id/invite_step2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="16dp"
                tools:ignore="UseCompoundDrawables">

                <TextView
                    android:id="@+id/tvLabel1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginRight="8dp"
                    android:text="@string/invite_to_friend_desc"
                    android:textAlignment="viewStart"
                    android:textStyle="bold"
                    android:visibility="visible" />

                <LinearLayout
                    android:id="@+id/layoutInviteCode"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="8dp"
                    android:orientation="horizontal"
                    android:visibility="visible">

                    <TextView
                        android:id="@+id/tvInviteCode"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:gravity="center"
                        android:text="@string/_863_265_963"
                        android:textAlignment="center"
                        android:textSize="34sp"
                        android:textStyle="bold" />

                    <ImageView
                        android:id="@+id/ivInviteCodeCopyBtn"
                        android:layout_width="wrap_content"
                        android:layout_height="24dp"
                        app:srcCompat="@drawable/ic_baseline_content_copy_24"
                        android:contentDescription="@string/copy" />

                </LinearLayout>

                <Button
                    android:id="@+id/btnSharewithFriends"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/share_with_friends"
                    android:textColor="@color/WhiteSmoke"
                    android:textSize="18sp"
                    android:visibility="visible"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvRequestHadya" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>


    </LinearLayout>
</ScrollView>